--- a/DiscordScheduleAutomatum V.3/.project
+++ b/DiscordScheduleAutomatum V.3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>lib</name>
+	<name>DiscordScheduleAutomatum V.3</name>
 	<comment>Project lib created by Buildship.</comment>
 	<projects>
 	</projects>
