--- a/DiscordScheduleAutomatum V.3/build.gradle
+++ b/DiscordScheduleAutomatum V.3/build.gradle
@@ -28,4 +28,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/net.dv8tion/JDA
     implementation group: 'net.dv8tion', name: 'JDA', version: '5.0.0-alpha.11'
+    
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+	annotationProcessor 'org.projectlombok:lombok:1.18.28'
+	
+	testCompileOnly 'org.projectlombok:lombok:1.18.28'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
 }
